# theOneMakesAqua2P

./: .gitignore  LICENSE  README.md
1mkAqua-front/: package.json  pnpm-lock.yaml  vite.config.ts
1mkAqua-front/src/: App.vue  components.d.ts  main.ts  typed-router.d.ts
1mkAqua-front/src/components/layouts/: BaseHeader.vue
1mkAqua-front/src/pages/: game.vue
OneMkAqua-back/: README.md  pyproject.toml
OneMkAqua-back/src/onemkaqua_back/: server.py  utils.py
